# making_it_to_steam

./: .gitignore  CMakeLists.txt  README.md  callgrind.out.5745  imgui.ini  making_it_to_steam.pro  new_2d_game.pro
examples/android_test/: CMakeLists.txt  android_scene.hpp  main.cpp
examples/test_scene/: CMakeLists.txt  main.cpp  snake1.cpp  snake1.hpp  snake1_end_menu.cpp  snake1_end_menu.hpp  test_scene.cpp  test_scene.hpp
examples/test_scene/shaders/: shader_fb.vert  shader_red.frag
game/anim_creator/: CMakeLists.txt  adjust_anims.cpp  adjust_anims.hpp  anim_creator.cpp  anim_creator.hpp  anim_rect.cpp  anim_rect.hpp  animation.hpp  camera_scene.cpp  camera_scene.hpp  main.cpp  origin_mode.cpp  origin_mode.hpp  preview.cpp  preview.hpp  set_coll_data.cpp  set_coll_data.hpp
game/anim_creator/res/: demo.anim
game/particle_editor/: CMakeLists.txt  emitter.cpp  emitter.hpp  main.cpp  particle.hpp  particle_editor.cpp  particle_editor.hpp
game1/tools/: anim_creator.cpp  anim_creator.cpp.autosave  anim_creator.hpp  anim_frame.cpp  anim_frame.hpp  anim_tool.cpp  anim_tool.hpp  animation.cpp  animation.hpp  selection_rect.hpp
include/MITS/: app.hpp  scene.hpp  scene_common.hpp  sound_system.hpp
include/MITS/opengl/: buffers.hpp
include/MITS/rendering/: font_loader.hpp  renderer_2d.hpp  sprite.hpp  vbo_particle.hpp
shaders/: shader_2d.frag  shader_2d.vert  shader_2d_batching.frag  shader_2d_batching.vert  shader_2d_p.frag  shader_2d_p.vert  shader_2d_p_tCs.frag  shader_2d_p_tCs.vert  shader_fb_blend.frag  shader_fb_blur.frag  shader_fb_final.frag  shader_fb_test_red.frag  shader_wave1.frag
source/: app.cpp  app.hpp  common_scene.hpp  key_input.hpp  main.cpp  res_class.h  res_class.hpp  scene.cpp  scene.h  scene.hpp  sound_system.cpp  sound_system.h  sound_system.hpp  systems.h  systems.hpp
source/game1/: game1.cpp  game1.h
source/glad/: glad.c  glad.h
source/imgui/: imgui_impl_sdl_gl3.cpp
source/opengl/: base.hpp  buffers.cpp  other.cpp  other.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
source/rendering/: font_loader.cpp  font_loader.hpp  postprocessor.cpp  postprocessor.hpp  render_obj_base.hpp  renderer_2d.cpp  renderer_2d.hpp  sprite.hpp  text.cpp  text.hpp  vbo_particle.hpp
source/test_scene/: snake1.cpp  snake1.hpp  snake1_end_menu.cpp  snake1_end_menu.hpp  test_scene.cpp  test_scene.hpp
src/: CMakeLists.txt  app.cpp  scene.cpp  sound_system.cpp
src/glad/: glad.c
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl_gl3.cpp
src/opengl/: buffers.cpp  other.cpp  other.hpp  shader.cpp  stb_image.h  texture.cpp
src/rendering/: font_loader.cpp  postprocessor.cpp  renderer_2d.cpp  text.cpp
src/rendering/shaders/: shader_2d.frag  shader_2d.vert  shader_2d_batching.frag  shader_2d_batching.vert  shader_2d_flipped.frag  shader_2d_flipped.vert  shader_2d_p.frag  shader_2d_p.vert  shader_2d_p_tCs.frag  shader_2d_p_tCs.vert  shader_fb.vert  shader_fb_blend.frag  shader_fb_blur.frag  shader_fb_final.frag
